--- a/rSYBL/rSYBL-analysis-engine/src/main/resources/config.properties
+++ b/rSYBL/rSYBL-analysis-engine/src/main/resources/config.properties
@@ -14,7 +14,7 @@ EnforcementServiceURL = http://localhost/celar-orchestrator/deployment/
 #  Value for  ApplicationSpecificInformation: files/runtime
 ApplicationSpecificInformation = runtime
 #monitoring
-MonitoringPlugin =  at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.melaPlugin.MELA_API
+MonitoringPlugin =  at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.melaPlugin.MELA_API3
 #enforcement
 #EnforcementPlugin =  at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.enforcementPlugins.openstack.EnforcementOpenstackAPI 		
 EnforcementPlugin = at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.celar.EnforcementPluginCELAR
