--- a/rpm/pom.xml
+++ b/rpm/pom.xml
@@ -11,7 +11,7 @@
         <version>1.0.0-SNAPSHOT</version>
     </parent>
 
-    <url>https://github.com/CELAR/multilevel-metrics-evaluation</url>
+    <url>https://github.com/CELAR/decision-module</url>
 
     <description>
         CELAR Decision-Making Module
@@ -90,11 +90,10 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>rpm-maven-plugin</artifactId>
-                <version>2.1-alpha-4</version>
                 <extensions>true</extensions>
                 <configuration>
                     <classifier>${package.os}</classifier>
-                    <!-- <release>${BUILD_NUMBER}.${package.os}</release> -->
+                    <release>${BUILD_NUMBER}.${package.os}</release> 
                     <summary>Decision Making Module</summary>
                     <version>1.0.0</version>
                     <name>celar-decision-making</name>
