--- a/rSYBL/pom.xml
+++ b/rSYBL/pom.xml
@@ -10,8 +10,8 @@
 
     <parent>
         <groupId>eu.celar</groupId>
-        <artifactId>distribution</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <artifactId>decision-making-module</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <url>https://github.com/CELAR/decision-module</url>
