--- a/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/pom.xml
+++ b/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/pom.xml
@@ -15,6 +15,11 @@
     <name>MELA-SpaceAndPathwayAnalysisService</name>
     <url>http://maven.apache.org</url>
 
+ <properties>
+        <spring.version>4.0.0.RELEASE</spring.version>
+        <slf4j.version>1.5.11</slf4j.version>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
