--- a/rSYBL/rSYBL-analysis-engine/src/main/webapp/WEB-INF/web.xml
+++ b/rSYBL/rSYBL-analysis-engine/src/main/webapp/WEB-INF/web.xml
@@ -1,25 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="2.5" xmlns="http://java.sun.com/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_2_5.xsd">
-	<display-name>rSYBL</display-name>
- <servlet>
-        <servlet-name>Jersey REST Service</servlet-name>
-        <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
-        <init-param>
-            <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>at.ac.tuwien.dsg.rSybl.analysisEngine.celar.api</param-value>
-        </init-param>
-      
+    <display-name>rSYBL</display-name>
+ 
+    
+    <context-param>
+        <param-name>contextConfigLocation</param-name>
+        <param-value>classpath*:decision-module-context.xml</param-value>
+    </context-param>
+
+    <listener>
+        <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+    </listener>
+
+    <servlet>
+        <servlet-name>CXFServlet</servlet-name>
+        <servlet-class>org.apache.cxf.transport.servlet.CXFServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+
     <servlet-mapping>
-        <servlet-name>Jersey REST Service</servlet-name>
-        <url-pattern>/restWS/*</url-pattern>
+        <servlet-name>CXFServlet</servlet-name>
+        <url-pattern>/restWS/*</url-pattern>  <!-- replace this with simply /api/* some time soon -->
     </servlet-mapping>
-  <session-config>
-    <session-timeout>120</session-timeout>
-  </session-config>
-      <welcome-file-list>
+    <session-config>
+        <session-timeout>120</session-timeout>
+    </session-config>
+    <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+
 </web-app>
  
