--- a/rpm/pom.xml
+++ b/rpm/pom.xml
@@ -103,7 +103,7 @@
                     <copyright>Apache License, Version 2.0</copyright>
                     <url>http://infosys.tuwien.ac.at</url>
                     <needarch>noarch</needarch>
-                    <description>Decision making module, include rSYBL, MELA and SALSA</description>
+                    <description>Decision making module</description>
                     <mappings>
                         <mapping>
                             <directory>/opt/dmm-service</directory>
