--- a/MELA-AnalysisService/pom.xml
+++ b/MELA-AnalysisService/pom.xml
@@ -11,6 +11,7 @@
     <groupId>eu.celar.decision-making</groupId>
     <artifactId>MELA-AnalysisService</artifactId>
     <name>MELA-AnalysisService</name>
+    <version>1.0-SNAPSHOT</version>
     <description> MELA Service profiding elasticity analysis to the decision module </description>
 
 
