--- a/MELA-AnalysisService/pom.xml
+++ b/MELA-AnalysisService/pom.xml
@@ -1,14 +1,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-  
+    
     <parent>
-        <groupId>eu.celar</groupId>
-        <artifactId>distribution</artifactId>
-        <version>0.0.1-SNAPSHOT</version>
+        <groupId>eu.celar.multilevel-metrics-evaluation</groupId>
+        <artifactId>MELA-Pom</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <groupId>eu.celar.decision-making</groupId>
+    
     <artifactId>MELA-AnalysisService</artifactId>
     <name>MELA-AnalysisService</name>
     <version>1.0-SNAPSHOT</version>
