--- a/rSYBL/pom.xml
+++ b/rSYBL/pom.xml
@@ -9,7 +9,7 @@
     <!-- Standalone MELA and core sources located for conveninence at https://github.com/tuwiendsg/MELA  -->
 
     <parent>
-        <groupId>eu.celar</groupId>
+        <groupId>eu.celar.decision-making</groupId>
         <artifactId>decision-making-module</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
