--- a/rpm/pom.xml
+++ b/rpm/pom.xml
@@ -6,7 +6,7 @@
     <name>CELAR DMM (rpm)</name>
 
     <parent>
-        <groupId>eu.celar</groupId>
+        <groupId>eu.celar.decision-making</groupId>
         <artifactId>decision-making-module</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
