setting client configuration for orchestrator

--- a/rSYBL/rSYBL-analysis-engine/src/main/resources/config.properties
+++ b/rSYBL/rSYBL-analysis-engine/src/main/resources/config.properties
@@ -19,8 +19,13 @@ MonitoringPlugin =  at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.
 #EnforcementPlugin =  at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.enforcementPlugins.openstack.EnforcementOpenstackAPI 		
 EnforcementPlugin = at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.celar.EnforcementPluginCELAR
 
-CompositionRulesMELA = ./config/cassandraApplicationCompositionRules.xml
 #REFRESH_PERIOD - how often decisions should be taken
 REFRESH_PERIOD = 90000
-
+CELAROrchestrator_Port = 80
+CELAROrchestrator_Host = localhost
+CompositionRulesMELA = ./config/compositionRules.xml
 Effects = ./config/effects.json
+PrimitivesDescription = ./config/primitives.xml
+ActionPlans = actionPlans.csv
+
+
