--- a/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/pom.xml
+++ b/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/pom.xml
@@ -129,7 +129,25 @@
             <version>1.0-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
-  
+       
+        <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>1.4.181</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.33</version>
+        </dependency>
+
 
     </dependencies>
 
