--- a/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/src/main/webapp/WEB-INF/web.xml
+++ b/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService/src/main/webapp/WEB-INF/web.xml
@@ -8,6 +8,11 @@
         <param-value>classpath*:mela-analysis-service-context.xml</param-value>
     </context-param>
 
+     <context-param>
+        <param-name>spring.profiles.default</param-name>
+        <param-value>PORTABLE</param-value>
+    </context-param>
+ 
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
