--- a/rSYBL/rSYBL-analysis-engine/src/main/resources/config/Log4j.properties
+++ b/rSYBL/rSYBL-analysis-engine/src/main/resources/config/Log4j.properties
@@ -10,5 +10,5 @@ log4j.appender.default.file.append=true
 log4j.appender.default.file.file=/tmp/rSYBL.log
 #log4j.appender.default.file.file=../logs/rSYBL.log
 log4j.appender.default.file.layout=org.apache.log4j.PatternLayout
-log4j.appender.default.file.layout.ConversionPattern=%-5p %c: %m%n
+log4j.appender.default.file.layout.ConversionPattern=(%F:%L) %-5p %c: %m%n
 log4j.appender.default.file.immediateFlush=true
