--- a/rSYBL/rSYBL-data-processing-unit/pom.xml
+++ b/rSYBL/rSYBL-data-processing-unit/pom.xml
@@ -76,4 +76,30 @@
 			
         </plugins>
     </build>
+    
+    
+    <repositories>
+        <repository>
+            <id>maven-restlet-repo</id>
+            <name>Public online Restlet repository</name>
+            <url>http://maven.restlet.org</url>
+        </repository>
+ 
+        <repository>
+            <id>dsg_repo_central</id>
+            <url>http://repo.infosys.tuwien.ac.at/artifactory/comot</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+        </repository>
+        <repository>
+            <id>dsg_repo_snapshots</id>
+            <url>http://repo.infosys.tuwien.ac.at/artifactory/comot</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+        </repository>
+        
+    </repositories>
+    
 </project>
