--- a/rSYBL/rSYBL-cloud-interaction-unit/pom.xml
+++ b/rSYBL/rSYBL-cloud-interaction-unit/pom.xml
@@ -1,6 +1,6 @@
  
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <version>1.0-SNAPSHOT</version>
     <name>CELAR DMM Cloud Interaction Unit</name>
@@ -11,7 +11,7 @@
     <parent>
         <groupId>eu.celar.decision-making</groupId>
         <artifactId>rSYBL-decision-making-pom</artifactId>
-    <version>1.0-SNAPSHOT</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <artifactId>rSYBL-cloud-interaction-unit</artifactId>
   
@@ -52,10 +52,10 @@
             <type>jar</type>
         </dependency>
         
- <dependency>
+        <dependency>
             <groupId>com.sixsq.slipstream</groupId>
             <artifactId>SlipStreamPersistence</artifactId>
-            <version>2.3.0</version>
+            <version>2.11</version>
         </dependency>
         <dependency>
             <groupId>gr.ntua.cslab</groupId>
@@ -63,7 +63,7 @@
             <version>0.1-SNAPSHOT</version>
             <type>jar</type>
         </dependency>
-         <dependency>
+        <dependency>
             <groupId>gr.ntua.cslab</groupId>
             <artifactId>orchestrator-client</artifactId>
             <version>0.1-SNAPSHOT</version>
@@ -78,11 +78,11 @@
         <dependency>
             <groupId>at.ac.tuwien.rSYBL.control-service</groupId>
             <artifactId>rSYBL-cloud-interaction-unit</artifactId>
-             <version>1.0-SNAPSHOT</version>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <repositories>
-          <repository>
+        <repository>
             <releases>
                 <enabled>true</enabled>
             </releases>
@@ -116,6 +116,37 @@
                     <source>1.7</source>
                     <target>1.7</target>
                 </configuration>
+            </plugin>
+            
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>1.7</version>
+                <configuration>
+                    <transformers>
+                        <transformer
+                            implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                            <manifestEntries>
+                                <Main-Class>at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.celar.EnforcementPluginCELAR</Main-Class>
+                            </manifestEntries>
+                        </transformer>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                            <resource>META-INF/spring.handlers</resource>
+                        </transformer>
+                        <transformer implementation="org.apache.maven.plugins.shade.resource.AppendingTransformer">
+                            <resource>META-INF/spring.schemas</resource>
+                        </transformer> 
+
+                    </transformers>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
 			
