Added missing repo for building also analysis service

--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,7 @@
     <modules>
         <module>rSYBL</module>
         <module>MELA-AnalysisService</module>
-         <!--<module>SALSA</module>  -->
+        <!--<module>SALSA</module>  -->
     </modules>
     <properties>
         <spring.version>4.0.0.RELEASE</spring.version>
@@ -58,6 +58,17 @@
                 <enabled>false</enabled>
             </releases>
         </repository>
+        
+     
+        <repository>
+            <id>CELAR Nexus repository - SNAPSHOTS</id>
+            <url>http://snf-175960.vm.okeanos.grnet.gr/nexus/content/repositories/snapshots/</url>
+        </repository>
+        <repository>
+            <id>CELAR Nexus repository - RELEASES</id>
+            <url>http://snf-175960.vm.okeanos.grnet.gr/nexus/content/repositories/releases/</url>
+        </repository>
+     
         
     </repositories>
     
