--- a/rSYBL/rSYBL-cloud-interaction-unit/pom.xml
+++ b/rSYBL/rSYBL-cloud-interaction-unit/pom.xml
@@ -52,11 +52,14 @@
             <type>jar</type>
         </dependency>
         
+    
         <dependency>
             <groupId>com.sixsq.slipstream</groupId>
             <artifactId>SlipStreamPersistence</artifactId>
-            <version>2.11</version>
+            <version>${slipstream.version}</version>
         </dependency>
+
+    
         <dependency>
             <groupId>gr.ntua.cslab</groupId>
             <artifactId>orchestrator-beans</artifactId>
@@ -81,30 +84,7 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
-    <repositories>
-        <repository>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>slipstream.releases</id>
-            <name>SlipStream Releases</name>
-            <url>http://nexus.sixsq.com/content/repositories/releases</url>
-        </repository>
-        <repository>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-            <snapshots>
-                <enabled>true</enabled>
-            </snapshots>
-            <id>slipstream.snapshots</id>
-            <name>SlipStream Snapshots</name>
-            <url>http://nexus.sixsq.com/content/repositories/snapshots</url>
-        </repository>
-    </repositories>
+    
     <build>
         <plugins>
     
@@ -152,4 +132,7 @@
 			
         </plugins>
     </build>
+    
+     
+        
 </project>
