install script + config

--- a/DataControlService/DEPIC/depic-orchestrator/src/main/webapp/WEB-INF/config.properties
+++ b/DataControlService/DEPIC/depic-orchestrator/src/main/webapp/WEB-INF/config.properties
@@ -1,14 +1,10 @@
 #Wed Jul 22 10:31:57 CEST 2015
 DB.PAM.IP=localhost
 DB.ELASTICITY.PROCESSES.REPO.DATABASE=ElasticityProcess
-EDAAS.URL=http\://128.130.172.216\:8080/DepicTooling
 ORCHESTRATOR.PORT=8080
-SALSA.DEPIC.ENDPOINT=http\://128.130.172.215\:8380/salsa-engine/rest/services/
 ORCHESTRATOR.IP=localhost
-SALSA.SERVICE.ENDPOINT=http\://128.130.172.215\:8380/salsa-engine/rest
 DATA.ASSET.LOADER.IP=localhost
 DB.PAM.DATABASE=PrimitiveActionMetadata
-ARTIFACT.REPO=http\://128.130.172.215/salsa/upload/files/jun/artifact_sh/
 CUSTOMER.PER.SERVICE=500
 DATA.ASSET.LOADER.RESOURCE.REQUEST=/depic-orchestrator/rest/dataasset/dafmanagement
 ORCHESTRATOR.ELASTIC.SERVICE.RESOURCE=/depic-orchestrator/rest/elasticservice
@@ -22,5 +18,5 @@ DB.PAM.USERNAME=root
 DATABASE.IP=128.130.172.214
 DB.ELASTICITY.PROCESSES.REPO.PORT=3306
 JCATASCOPIA.IP=localhost
-JCATASCOPIA.ALL.METRICS.REST=http://128.130.172.230:8080/JCatascopia-Web/restAPI/agents/availableMetrics
-JCATASCOPIA.METRIC.VALUE.REST=http://128.130.172.230:8080/JCatascopia-Web/restAPI/metrics/
+JCATASCOPIA.ALL.METRICS.REST=http://localhost:8080/JCatascopia-Web/restAPI/agents/availableMetrics
+JCATASCOPIA.METRIC.VALUE.REST=http://localhost:8080/JCatascopia-Web/restAPI/metrics/
