Fix JC interaction and DEP execution

--- a/DataControlService/DEPIC/depic-orchestrator/src/main/webapp/WEB-INF/config.properties
+++ b/DataControlService/DEPIC/depic-orchestrator/src/main/webapp/WEB-INF/config.properties
@@ -1,22 +1,30 @@
 #Wed Jul 22 10:31:57 CEST 2015
-DB.PAM.IP=localhost
-DB.ELASTICITY.PROCESSES.REPO.DATABASE=ElasticityProcess
+
+
 ORCHESTRATOR.PORT=8080
 ORCHESTRATOR.IP=localhost
+
 DATA.ASSET.LOADER.IP=localhost
-DB.PAM.DATABASE=PrimitiveActionMetadata
-CUSTOMER.PER.SERVICE=500
-DATA.ASSET.LOADER.RESOURCE.REQUEST=/depic-orchestrator/rest/dataasset/dafmanagement
-ORCHESTRATOR.ELASTIC.SERVICE.RESOURCE=/depic-orchestrator/rest/elasticservice
-DB.ELASTICITY.PROCESSES.REPO.PASSWORD=123
-DB.ELASTICITY.PROCESSES.REPO.IP=localhost
-DB.PAM.PORT=3306
-DB.ELASTICITY.PROCESSES.REPO.USERNAME=root
-DB.PAM.PASSWORD=123
 DATA.ASSET.LOADER.PORT=8080
-DB.PAM.USERNAME=root
-DATABASE.IP=128.130.172.214
+
+CUSTOMER.PER.SERVICE=500
+
+DB.ELASTICITY.PROCESSES.REPO.DATABASE=ElasticityProcess
+DB.ELASTICITY.PROCESSES.REPO.IP=localhost
 DB.ELASTICITY.PROCESSES.REPO.PORT=3306
+DB.ELASTICITY.PROCESSES.REPO.USERNAME=root
+DB.ELASTICITY.PROCESSES.REPO.PASSWORD=123
+
+DB.PAM.DATABASE=PrimitiveActionMetadata
+DB.PAM.IP=localhost
+DB.PAM.PORT=3306
+DB.PAM.PASSWORD=123
+DB.PAM.USERNAME=root
+
+DATABASE.IP=128.130.172.214
+AGENT.IP=10.99.0.75
+
 JCATASCOPIA.IP=localhost
-JCATASCOPIA.ALL.METRICS.REST=http://localhost:8080/JCatascopia-Web/restAPI/agents/availableMetrics
+JCATASCOPIA.AGENT.ID.REST=http://localhost:8080/JCatascopia-Web/restAPI/agents
+JCATASCOPIA.ALL.METRICS.REST=http://localhost:8080/JCatascopia-Web/restAPI/agents/AGENTID/availableMetrics
 JCATASCOPIA.METRIC.VALUE.REST=http://localhost:8080/JCatascopia-Web/restAPI/metrics/
