--- a/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService-rpm/config/mela-analysis-service.properties
+++ b/MELA-AnalysisService/MELA-SpaceAndPathwayAnalysisService-rpm/config/mela-analysis-service.properties
@@ -1,4 +1,8 @@
 analysisservice.elasticityanalysis=true
+analysisservice.space.analysis.pooling.enabled=true
+analysisservice.space.analysis.period.s=600
+
 dataservice.ip=localhost
+cost.ip=localhost
 
 MELA_CONFIG_DIR=./config
