--- a/rSYBL/rSYBL-analysis-engine-tar/pom.xml
+++ b/rSYBL/rSYBL-analysis-engine-tar/pom.xml
@@ -19,11 +19,13 @@
     <dependency>
       <groupId>eu.celar.decision-making</groupId>
       <artifactId>rSYBL-analysis-engine</artifactId>
-      <type>war</type>
+      <type>jar</type>
+      <classifier>exec-war</classifier>
       <version>1.0-SNAPSHOT</version>
     </dependency>
   </dependencies>
-
+ 
+ 
   <build>
     <plugins>
 
@@ -43,7 +45,9 @@
                 <artifactItem>
                   <groupId>eu.celar.decision-making</groupId>
                   <artifactId>rSYBL-analysis-engine</artifactId>
-                  <type>war</type>
+	          <type>jar</type>
+	          <classifier>exec-war</classifier>
+                 <version>1.0-SNAPSHOT</version>
                 </artifactItem>
               </artifactItems>
             </configuration>
