--- a/rSYBL/rSYBL-analysis-engine/src/main/resources/config/Log4j.properties
+++ b/rSYBL/rSYBL-analysis-engine/src/main/resources/config/Log4j.properties
@@ -1,10 +1,10 @@
-log4j.rootLogger=ALL,  default.file
+log4j.rootLogger=INFO,default.file
 
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 
 # Pattern to output the caller's file name and line number.
-#log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
+log4j.appender.stdout.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 log4j.appender.default.file=org.apache.log4j.RollingFileAppender
 log4j.appender.default.file.append=true
 log4j.appender.default.file.file=/tmp/rSYBL.log
