updated dependency to solve missing class issue

--- a/rSYBL/rSYBL-cloud-application-dependency-graph/pom.xml
+++ b/rSYBL/rSYBL-cloud-application-dependency-graph/pom.xml
@@ -26,6 +26,8 @@
             <groupId>at.ac.tuwien.rSYBL.control-service</groupId>
             <artifactId>rSYBL-cloud-application-dependency-graph</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <type>jar</type>
+            <classifier>sources</classifier>
         </dependency>
     </dependencies>
     <build>
