updated config for rSYBL to use updated mela API

--- a/rSYBL/rSYBL-analysis-engine/src/main/resources/config.properties
+++ b/rSYBL/rSYBL-analysis-engine/src/main/resources/config.properties
@@ -19,6 +19,7 @@ MonitoringPlugin =  at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.
 #EnforcementPlugin =  at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.enforcementPlugins.openstack.EnforcementOpenstackAPI 		
 EnforcementPlugin = at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.celar.EnforcementPluginCELAR
 
+CompositionRulesMELA = ./config/cassandraApplicationCompositionRules.xml
 #REFRESH_PERIOD - how often decisions should be taken
 REFRESH_PERIOD = 90000
 CELAROrchestrator_Port = 80
@@ -27,5 +28,17 @@ CompositionRulesMELA = ./config/compositionRules.xml
 Effects = ./config/effects.json
 PrimitivesDescription = ./config/primitives.xml
 ActionPlans = actionPlans.csv
+DecisionsDifferentiatedOnViolationDegree=true
+ResourceLevelControlEnabled=true
+ResourcesEffects = ./config/resourcesEffects.json
 
+QueueUrl =tcp://0.0.0.0:61616
+QueueName=events
+EventQueueEnabled=false
+ADVISEEnabled = false
+Cutoff=0.5
+IntervalSize = 30
+LearningPeriod=100000
+ACCEPTABLE_DISTANCE=800
+ActionPlans = actionPlans.csv
 
