--- a/rSYBL/rSYBL-cloud-interaction-unit/config.properties
+++ b/rSYBL/rSYBL-cloud-interaction-unit/config.properties
@@ -14,21 +14,31 @@ EnforcementServiceURL = http://localhost/celar-orchestrator/deployment/
 #  Value for  ApplicationSpecificInformation: files/runtime
 ApplicationSpecificInformation = runtime
 #monitoring
-MonitoringPlugin = at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.dryRun.MonitoringAPIDryRun
-#MonitoringPlugin =  at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.melaPlugin.MELA_API3
+MonitoringPlugin =  at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.melaPlugin.MELA_API3
 #enforcement
 #EnforcementPlugin =  at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.enforcementPlugins.openstack.EnforcementOpenstackAPI 		
 EnforcementPlugin = at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.celar.EnforcementPluginCELAR
 
+CompositionRulesMELA = ./config/cassandraApplicationCompositionRules.xml
 #REFRESH_PERIOD - how often decisions should be taken
 REFRESH_PERIOD = 90000
 CELAROrchestrator_Port = 80
-CELAROrchestrator_Host = 83.212.116.47
+CELAROrchestrator_Host = localhost
 CompositionRulesMELA = ./config/compositionRules.xml
 Effects = ./config/effects.json
 PrimitivesDescription = ./config/primitives.xml
 ActionPlans = actionPlans.csv
+DecisionsDifferentiatedOnViolationDegree=true
+ResourceLevelControlEnabled=true
+ResourcesEffects = ./config/resourcesEffects.json
 
 QueueUrl =tcp://0.0.0.0:61616
 QueueName=events
 EventQueueEnabled=false
+ADVISEEnabled = false
+Cutoff=0.5
+IntervalSize = 30
+LearningPeriod=100000
+ACCEPTABLE_DISTANCE=800
+ActionPlans = actionPlans.csv
+
