--- a/rpm/config.properties
+++ b/rpm/config.properties
@@ -1,6 +1,6 @@
 #monitoring
 #MonitoringServiceURL = http://localhost/MELA-AnalysisService-0.1-SNAPSHOT/REST_WS
-MonitoringServiceURL = http://localhost:8088/MELA/REST_WS
+MonitoringServiceURL = http://localhost:8180/MELA/REST_WS
 
 EnforcementServiceURL = http://localhost/celar-orchestrator/deployment/
 						
@@ -14,7 +14,7 @@ EnforcementServiceURL = http://localhost/celar-orchestrator/deployment/
 #  Value for  ApplicationSpecificInformation: files/runtime
 ApplicationSpecificInformation = runtime
 #monitoring
-MonitoringPlugin =  at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.melaPlugin.MELA_API
+MonitoringPlugin =  at.ac.tuwien.dsg.rSybl.dataProcessingUnit.monitoringPlugins.melaPlugin.MELA_API3
 #enforcement
 #EnforcementPlugin =  at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.enforcementPlugins.openstack.EnforcementOpenstackAPI 		
 EnforcementPlugin = at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.celar.EnforcementPluginCELAR
@@ -22,5 +22,23 @@ EnforcementPlugin = at.ac.tuwien.dsg.rSybl.cloudInteractionUnit.celar.Enforcemen
 CompositionRulesMELA = ./config/cassandraApplicationCompositionRules.xml
 #REFRESH_PERIOD - how often decisions should be taken
 REFRESH_PERIOD = 90000
-
+CELAROrchestrator_Port = 80
+CELAROrchestrator_Host = localhost
+CompositionRulesMELA = ./config/compositionRules.xml
 Effects = ./config/effects.json
+PrimitivesDescription = ./config/primitives.xml
+ActionPlans = actionPlans.csv
+DecisionsDifferentiatedOnViolationDegree=true
+ResourceLevelControlEnabled=true
+ResourcesEffects = ./config/resourcesEffects.json
+
+QueueUrl =tcp://0.0.0.0:61616
+QueueName=events
+EventQueueEnabled=false
+ADVISEEnabled = false
+Cutoff=0.5
+IntervalSize = 30
+LearningPeriod=100000
+ACCEPTABLE_DISTANCE=800
+ActionPlans = actionPlans.csv
+
