--- a/salsa-core-pom/quelle-core/ElasticityQuantification/pom.xml
+++ b/salsa-core-pom/quelle-core/ElasticityQuantification/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>at.ac.tuwien.dsg.cloud.salsa</groupId>
+        <groupId>eu.celar.decision-making</groupId>
         <artifactId>QUELLE-Core-SALSA</artifactId>
         <version>2.0</version>
     </parent>
