--- a/salsa-core-pom/salsa-common/pom.xml
+++ b/salsa-core-pom/salsa-common/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>at.ac.tuwien.dsg.cloud.salsa</groupId>
+        <groupId>eu.celar.decision-making</groupId>
         <artifactId>salsa-core-pom</artifactId>
         <version>2.0</version>
     </parent>
