--- a/salsa-core-pom/pom.xml
+++ b/salsa-core-pom/pom.xml
@@ -19,7 +19,7 @@
 
     <artifactId>salsa-core-pom</artifactId>
     <packaging>pom</packaging>
-    <version>2.0</version>
+    <version>1.0-SNAPSHOT</version>
 
     <name>SALSA</name>
     <url>http://maven.apache.org</url>
