--- a/salsa-core-pom/quelle-core/pom.xml
+++ b/salsa-core-pom/quelle-core/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>eu.celar.decision-making</groupId>
         <artifactId>salsa-core-pom</artifactId>
-        <version>2.0</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
 
     <artifactId>QUELLE-Core-SALSA</artifactId>
