--- a/rSYBL/rSYBL-analysis-engine/src/main/resources/config.properties
+++ b/rSYBL/rSYBL-analysis-engine/src/main/resources/config.properties
@@ -1,4 +1,5 @@
 #monitoring
+#jar
 #MonitoringServiceURL = http://localhost/MELA-AnalysisService-0.1-SNAPSHOT/REST_WS
 MonitoringServiceURL = http://localhost:8180/MELA/REST_WS
 
@@ -42,3 +43,6 @@ LearningPeriod=100000
 ACCEPTABLE_DISTANCE=800
 ActionPlans = actionPlans.csv
 
+#used to determine if a unit is busy and should not be scaled in.
+#metric must return 0 for not busy, and 1 for busy
+busyUnitMarkerMetric=busyness
